# rix

./: .envrc  .gitignore  CONTRIBUTE.md  Cargo.toml  README.md  flake.nix  pkg.nix  rust-toolchain.toml
.github/workflows/: build.yml  magic-nix-cache.yml
nixjs-rt/: .gitignore  .prettierignore  CONTRIBUTE.md  README.md  jest.config.json  package-lock.json  package.json  pkg.nix  tsconfig.json
nixjs-rt/.github/workflows/: build.yml
nixjs-rt/scripts/: check-nix-pkg.sh  check-npm-deps-hash.sh  check-npm.sh  update-npm-deps-hash.sh
nixjs-rt/src/: builtins.ts  globals.d.ts  legacyTests.test.ts  lib.test.ts  lib.ts  testUtils.ts  utils.ts
nixjs-rt/src/builtins/: builtins.ts
nixjs-rt/src/errors/: abort.ts  attribute.ts  builtins.ts  errorMessage.ts  function.ts  index.ts  other.ts  typeError.ts  variable.ts
scripts/: check-cargo.sh  ci-build-rix.sh  ci-check-nixjs-rt.sh  ci-check-npm-deps-hash.sh  ci-nix-pkg-nixj-js.sh  ci-nix-pkg-rix.sh  setup-rust-dev-env.sh  update-npm-deps-hash.sh
src/: cmd_show_derivations.rs  derivations.rs  hashes.rs  lib.rs  main.rs
src/building/: mod.rs
src/cmd/: build_derivation.rs  eval.rs  hash.rs  mod.rs  show_derivation.rs  transpile.rs
src/eval/: emit_js.rs  error.rs  execution.rs  helpers.rs  mod.rs  nix_to_js.rs  nix_v8.rs  nix_v8_builtins.rs  tests.rs  types.rs
src/parsers/: derivations.rs  mod.rs
src/sandbox/: mod.rs
src/store/: api.rs  mod.rs  nix_delegation_store.rs
src/tests/: attr_set.rs  builtins.rs  lambda.rs  literals.rs  mod.rs  operators.rs
tests/: cmd_show_derivation.rs  mod.rs  test_utils.rs
tests/building/: mod.rs
tests/cmd/: build_derivation.rs  eval.rs  hash.rs  mod.rs  show_derivation.rs  transpile.rs
(+11 files in other folders)
