[package]
name = "rix"
version = "0.1.0"
edition = "2021"

[lib]
name = "rix"
path = "src/lib.rs"

[[bin]]
name = "rix"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"

[dependencies]
clap = "*"
colored = "*"
libc = "*"
nix = "*"
nom = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"