[package]
name = "rustnix"
description = "Nix language interpreter"
documentation = "https://github.com/urbas/rix/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/urbas/rix"
license = "MIT"
repository = "https://github.com/urbas/rix"
version = "0.0.1"

[lib]
name = "rix"
path = "src/lib.rs"

[[bin]]
name = "rix"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.1"

[dependencies]
clap = "4.0.18"
colored = "2.0.0"
rowan = "0"
rnix = "0"
v8 = "0.85.0"
